force-app/main/default/objects/leaseworks__Loan_Asset__c/leaseworks__Loan_Asset__c.object-meta.xml
<CustomObject>
    <label>Loan Asset</label>
    <nameField>
        <label>Loan Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>