force-app/main/default/objects/leaseworks__Loan_Asset__c/fields/leaseworks__Allocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Allocation_Amount__c</fullName>
    <description>Asset Amount breakup from the overall loan amount</description>
    <inlineHelpText>Asset Amount breakup from the overall loan amount</inlineHelpText>
    <label>Allocation (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>