force-app/main/default/objects/leaseworks__Loan_Asset__c/fields/leaseworks__Loan_Asset_Pool__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Loan_Asset_Pool__c</fullName>
    <label>Loan Asset Pool</label>
    <referenceTo>leaseworks__Loan_Asset_Pool__c</referenceTo>
    <relationshipLabel>Loan Assets</relationshipLabel>
    <relationshipName>Loan_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>