force-app/main/default/objects/leaseworks__Loan_Asset__c/fields/leaseworks__MSN_ESN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN_ESN__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MSN/ESN</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Loan Assets</relationshipLabel>
    <relationshipName>Loan_Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>